# cpp-systems-portfolio

./: .gitignore  README.md
projects/: Calculators.md
projects/banking-simulator/: CMakeLists.txt  README.md
projects/bmi-calculator/: CMakeLists.txt  README.md
projects/calculator/: CMakeLists.txt  README.md
projects/currency-converter/: CMakeLists.txt  README.md
projects/currency-converter/include/: CurrencyConverterApp.h  CurrencyService.h  HttpClient.h
projects/currency-converter/src/: CurrencyConverterApp.cpp  CurrencyService.cpp  HttpClient.cpp  main.cpp
projects/ecommerce-backend/: CMakeLists.txt  README.md
projects/ecommerce-backend/include/: CartService.h  DatabaseManager.h  OrderService.h  ProductService.h  UserService.h
projects/ecommerce-backend/sql/: schema.sql  seed.sql
projects/ecommerce-backend/src/: CartService.cpp  DatabaseManager.cpp  OrderService.cpp  ProductService.cpp  UserService.cpp  main.cpp
projects/employee-management-system/: CMakeLists.txt  README.md  build.txt
projects/employee-management-system/include/: DatabaseManager.h  DepartmentService.h  EmployeeService.h  SalaryService.h
projects/employee-management-system/sql/: schema.sql  seed.sql
projects/employee-management-system/src/: DatabaseManager.cpp  DepartmentService.cpp  EmployeeService.cpp  SalaryService.cpp  main.cpp
projects/expense-tracker/: CMakeLists.txt  README.md
projects/password-generator/: CMakeLists.txt  README.md
projects/password-manager/: CMakeLists.txt  README.md
projects/pos-system/: CMakeLists.txt  README.md
(+75 files in other folders)
